--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,58 @@
-apipkg==1.5
-asn1crypto==0.24.0
-atomicwrites==1.1.5
+atomicwrites==1.2.0
 attrs==18.1.0
-certifi==2018.4.16
-cffi==1.11.5
+bleach==3.0.2
+br==0.1
+bword==0.10
+certifi==2018.8.24
 chardet==3.0.4
 colorama==0.3.9
-cryptography==2.2.2
-execnet==1.5.0
+coverage==4.5.1
+decorator==4.3.0
+Django==2.1.2
+docutils==0.14
+future==0.16.0
+glob2==0.6
+html-testRunner==1.1.2
+html2pdf==0.1
 idna==2.7
-more-itertools==4.2.0
-pluggy==0.6.0
+Jinja2==2.9.5
+json-tools==0.4.1
+JSONFormatBear==0.10.0
+jsonpath==0.75
+Mako==1.0.7
+MarkupSafe==1.0
+more-itertools==4.3.0
+parse==1.9.0
+parse-type==0.4.2
+pdf2image==1.0.0
+pdfkit==0.6.1
+Pillow==5.2.0
+pipenv==2018.10.13
+pkginfo==1.4.2
+pluggy==0.7.1
+public==1.0.3
 py==1.5.4
-pycparser==2.18
-PyMySQL==0.9.2
-pytest==3.6.3
-pytest-forked==0.2
+Pygments==2.2.0
+pytest==3.7.2
+pytest-bdd==2.21.0
+pytest-cov==2.6.0
 pytest-html==1.19.0
 pytest-metadata==1.7.0
+pytest-repeat==0.7.0
 pytest-runner==4.2
-pytest-sugar==0.9.1
-pytest-tldr==0.1.4
-pytest-xdist==1.22.2
-PyYAML==3.13
+pytz==2018.5
+qrcode==6.0
+readme-renderer==23.0
 requests==2.19.1
+requests-toolbelt==0.8.0
+selenium==3.14.0
+self==1.0.2
 six==1.11.0
-sonarqube-api==1.3.1
-termcolor==1.1.0
+sortedcontainers==2.0.5
+tqdm==4.28.1
+twine==1.12.1
 urllib3==1.23
+virtualenv==16.0.0
+virtualenv-clone==0.4.0
+webencodings==0.5.1
+zmail==0.2.0
